--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,8 +19,10 @@ img {
 
 /* === Typography === */
 h1 {
-  font-size: 2rem;
+  margin-bottom: 20px;
   text-align: center;
+  font-size: 2rem;
+  color: black;
 }
 
 h2 {
@@ -51,6 +53,10 @@ p {
 .dark {
   background-color: #121212;
   color: #f1f1f1;
+}
+
+.dark h1 {
+  color: white;
 }
 
 /* === Responsive Design (Mobile) === */
