--- a/frontend/src/components/APODCard.css
+++ b/frontend/src/components/APODCard.css
@@ -1,15 +1,17 @@
 .apod-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   background-color: #ffffff;
   border-radius: 16px;
   padding: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-  /* margin: 30px auto; */
-  margin-top: 24px;
-  max-width: 800px;
+  margin: 30px auto;
+  /* margin-top: 20px; */
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s ease;
   animation: fadeIn 0.6s ease-in-out;
 }
 
@@ -22,6 +24,24 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.archive-page .apod-card {
+  cursor: pointer;
+  max-width: 800px;
+}
+
+.archive-page .apod-card:hover {
+  border-color: rgba(230, 105, 124, 0.6); /* 연한 핑크색 (LightPink) */
+  box-shadow: 0 0 8px rgba(255, 182, 193, 0.7); /* 연한 핑크 그림자 */  
+}
+
+.home-page .apod-card {
+  width: auto;      /* 너비 자동, 이미지 크기에 따라 결정 */
+  max-width: 100vw; /* 화면 최대 너비 제한 */
+  /* height는 auto로 기본 동작 */
+  border-color: rgba(255, 255, 255, 0.4); /* 기본 테두리 */
+  /* box-shadow: none; */
 }
 
 .apod-title {
@@ -42,10 +62,31 @@
 }
 
 .apod-image, .apod-video {
+  width: 100%;
+  /* height: auto; */
+  border-radius: 12px;
+  max-height: 400px; /* 이미지 최대 높이 */
+  object-fit: cover; /* 이미지 비율 유지하며 자르기 */
+  border-radius: 6px;
+  margin-bottom: 12px;
+}
+
+.home-page .apod-card .apod-image, 
+.home-page .apod-card .apod-video {
+  width: auto;
+  max-width: 500vw; 
+  height: auto;
+  max-height: 80vh;  /* 최대 높이 제한 */
+  display: block;    /* 이미지 아래 공백 제거 */
+  margin: 0 auto;    /* 가운데 정렬 */
+}
+
+
+/* .apod-image, .apod-video {
   max-width: 100%;
   height: auto;
   border-radius: 12px;
-}
+} */
 
 .apod-description {
   font-size: 1rem;
