--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f4f9;
+  background-color: #e2e2e9;
   color: #000000;
   transition: background-color 0.3s, color 0.3s;
 }
