--- a/frontend/src/components/Loading.css
+++ b/frontend/src/components/Loading.css
@@ -12,7 +12,7 @@
   height: 80px;
   margin-bottom: 10px;
   border-radius: 50%;
-  border: 6px solid #f4f4f9;
+  border: 6px solid #e2e2e9;
   border-left-color: #fdaa6e;
   animation: spin 1s linear infinite;
 }
