--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -9,7 +9,7 @@
   right: 0;
   padding: 12px 24px;
   color: #ffffff;
-  background-color: #f4f4f9;
+  background-color: #e2e2e9;
   z-index: 1000;
 }
 
@@ -77,7 +77,7 @@
   width: 18px;
   height: 18px;
   border-radius: 50%;
-  background-color: #f4f4f9;
+  background-color: #e2e2e9;
   transition: 0.4s;
 }
 
